# kafka-playground

./: .env  .env.example  .gitignore  README.md  kafka_config.properties  pyproject.toml
logs/: log
sample/: payload.json
scripts/: openapi.py  server
src/kafka_test/: cli.py  consumer.py  datatypes.py  eventlog.py  producer.py  utils.py  workflow.py
src/kafka_test/database/: db_models.py
src/kafka_test/models/: config.py  dhcp_models.py
